# consult_agent_plus

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  DEPLOY.md  Makefile  PROPOSALS.md  docker-compose.override.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: config.py  database.py  deps.py  main.py
backend/app/api/v1/: __init__.py  analyses.py  auth.py  reports.py
backend/app/models/: __init__.py  analysis.py  user.py
backend/app/schemas/: analysis.py  auth.py
backend/app/services/: ai_service.py  mock_ai_service.py  pdf_service.py  storage_service.py
backend/app/workers/: analysis_worker.py
backend/tests/: conftest.py  test_ai_integration.py  test_analyses.py  test_auth.py
coordination/: active_work_registry.json  ai_response_schema.json  completed_work_log.json  defect_catalog.json  prompts.md  task_queue.json
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/e2e/: analysis.spec.ts  auth.spec.ts  catalog.spec.ts
frontend/playwright-report/: index.html
frontend/src/: App.tsx  index.css
frontend/src/__tests__/: AnalysisResult.test.tsx  UploadZone.test.tsx
frontend/src/lib/: api.ts  types.ts
frontend/src/pages/: AnalysisResultPage.tsx  CatalogPage.tsx  DashboardPage.tsx  LoginPage.tsx  NewAnalysisPage.tsx  RegisterPage.tsx
frontend/src/stores/: authStore.ts  (+1 more)
(+5 files in other folders)
